some final changes

--- a/README
+++ b/README
@@ -51,7 +51,7 @@ Files and Stuff:
     thumb.jpg
         The required thumbnail
 
-    Dynamical.tar.gz
+    Dynamical.zip
         An archive of the application executable.
 
     source.tar.gz
